--- a/clients/polymer-js/package.json
+++ b/clients/polymer-js/package.json
@@ -20,6 +20,7 @@
     "grunt-usemin": "~0.1.10",
     "grunt-rev": "~0.1.0",
     "grunt-open": "~0.2.0",
+    "grunt-vulcanize": "~0.1.0",
     "matchdep": "~0.1.2",
     "connect-livereload": "~0.2.0",
     "time-grunt": "~0.1.0"
