--- a/clients/polymer-js/package.json
+++ b/clients/polymer-js/package.json
@@ -18,6 +18,7 @@
     "grunt-mocha": "~0.3.1",
     "grunt-bower-requirejs": "~0.4.1",
     "grunt-usemin": "~0.1.10",
+    "grunt-manifest": "~0.4.0",
     "grunt-rev": "~0.1.0",
     "grunt-open": "~0.2.0",
     "grunt-vulcanize": "~0.1.0",
