--- a/clients/polymer-js/package.json
+++ b/clients/polymer-js/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "js",
-  "version": "0.0.0",
+  "name": "irssi-remote-client",
+  "version": "0.0.1",
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
