--- a/clients/polymer-js/package.json
+++ b/clients/polymer-js/package.json
@@ -1,30 +1,36 @@
 {
   "name": "irssi-remote-client",
   "version": "0.0.1",
+  "scripts": {
+    "postinstall": "bower install",
+    "build": "grunt"
+  },
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-copy": "~0.4.0",
-    "grunt-contrib-concat": "~0.2.0",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-compass": "~0.2.0",
-    "grunt-contrib-jshint": "~0.5.4",
-    "grunt-contrib-cssmin": "~0.6.0",
-    "grunt-contrib-connect": "0.3.0",
-    "grunt-contrib-clean": "0.4.0",
-    "grunt-contrib-htmlmin": "0.1.3",
-    "grunt-contrib-imagemin": "0.1.4",
-    "grunt-contrib-watch": "~0.4.0",
-    "grunt-mocha": "~0.3.1",
-    "grunt-bower-requirejs": "~0.4.1",
-    "grunt-usemin": "~0.1.10",
-    "grunt-manifest": "~0.4.0",
-    "grunt-rev": "~0.1.0",
-    "grunt-open": "~0.2.0",
-    "grunt-vulcanize": "~0.1.0",
-    "matchdep": "~0.1.2",
-    "connect-livereload": "~0.2.0",
-    "time-grunt": "~0.1.0"
+    "bower": "1.8.7",
+    "connect-livereload": "0.6.1",
+    "grunt": "1.0.3",
+    "grunt-bower-requirejs": "2.0.0",
+    "grunt-contrib-clean": "2.0.0",
+    "grunt-contrib-compass": "1.1.1",
+    "grunt-contrib-concat": "1.0.1",
+    "grunt-contrib-connect": "2.0.0",
+    "grunt-contrib-copy": "1.0.0",
+    "grunt-contrib-cssmin": "3.0.0",
+    "grunt-contrib-htmlmin": "3.0.0",
+    "grunt-contrib-imagemin": "3.1.0",
+    "grunt-contrib-jshint": "2.0.0",
+    "grunt-contrib-uglify": "4.0.0",
+    "grunt-contrib-watch": "1.1.0",
+    "grunt-manifest": "0.4.4",
+    "grunt-mocha": "1.2.0",
+    "grunt-open": "0.2.3",
+    "grunt-rev": "0.1.0",
+    "grunt-usemin": "3.1.1",
+    "grunt-vulcanize": "0.1.2",
+    "matchdep": "2.0.0",
+    "serve-static": "1.13.2",
+    "time-grunt": "2.0.0"
   },
   "engines": {
     "node": ">=0.8.0"
